# casio-latex-viewer

./: .dockerignore  .gitignore  BUILD_AND_DEPLOY.sh  CMakeLists.txt  DOCKER.md  DOCKER_PLAN.md  Dockerfile  README.md  docker-build.sh  fxconfig.toml  setup_phase1.sh  toolchain.cmake
exam/: concepts.tex  examples.tex  midterm2 (1).tex  midterm2.tex
src/: filebrowser.c  filebrowser.h  latex.c  latex.h  layout.c  layout.h  main.c  render.c  render.h  symbols.c  symbols.h  ui.h
